src/test/resources/model_test/valid/TwoEntities.model
name = ModelWithTwoEntities
version = 1.0
description = A model with two entities (Employee references Country)