src/test/resources/model_test/invalid/TwoEntities.model
name = ModelWithTwoEntities
version = 2.1
description = A model with two entities (Employee references Country)